# MAR_mini_project

./: .gitignore  README.md
PROJECT/line_tracking_jazzy/: COMMANDS.sh  README.md  build.sh
PROJECT/line_tracking_jazzy/src/line_tracking_robot/: CMakeLists.txt  package.xml
PROJECT/line_tracking_jazzy/src/line_tracking_robot/config/: robot.rviz
PROJECT/line_tracking_jazzy/src/line_tracking_robot/launch/: simulation.launch.py
PROJECT/line_tracking_jazzy/src/line_tracking_robot/line_tracking_robot/: __init__.py
PROJECT/line_tracking_jazzy/src/line_tracking_robot/models/line_robot/: robot.urdf.xacro
PROJECT/line_tracking_jazzy/src/line_tracking_robot/scripts/: camera_processor_node.py  line_follower_node.py  obstacle_avoidance_node.py  robot_controller_node.py  test_movement.py
PROJECT/line_tracking_jazzy/src/line_tracking_robot/worlds/: line_track.world
